[package]
name = "sheets-on-chain-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# JSON-RPC server (HTTP + WebSocket)
jsonrpsee = { version = "0.24", features = ["server", "client", "ws-client"] }

# Ethereum library
alloy = { version = "0.3", features = [
    "full",
    "providers",
    "rpc-types",
    "pubsub",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Misc
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
